<resources>
    <string name="app_name">GitHubBrowser</string>
    <string name="action_settings">Settings</string>

    <string name="main_activity_name">GitHub Browser</string>
    <string name="details_activity_name">Repository Details</string>

    <!-- Dialogs -->
    <string name="user_name_dialog_title">"Find repositories for:"</string>
    <string name="user_name_dialog_hint">"Username"</string>

    <!-- Repo list strings -->
    <string name="language_label">"Language"</string>
    <string name="stargazers_label">"Stargazers"</string>
    <string name="description_label">"Description"</string>
    <string name="owner_label">"Owner"</string>
    <string name="watchers_label">"Watchers"</string>
    <string name="created_at_label">"Created At"</string>
    <string name="updated_at_label">"Updated At"</string>

    <string name="full_name_formatted">%1$s/%2$s</string>

    <!-- Messages -->
    <string name="no_connection_message">No internet connection!</string>
    <string name="server_error_message">Internal server error.</string>



</resources>
